# ICNNs

./: README.md  pyproject.toml
src/icnns/: __init__.py
